[tool.poetry]
name = "near-api-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "near_api" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.28.2"
ed25519 = "^1.5"
base58 = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
